# screaming-channels-ble

./: .gitignore  README.md  pyproject.toml  view_traces.py
.github/workflows/: lint.yml  test.yml
collection/: collector.py
collection/config/: default.json
firmware/: Makefile
firmware/src/: main.c
firmware/src/aes128/: aes128.c  aes128.h
firmware/tests/: Makefile  test_aes128.c
tests/: test_board_aes.py
