[project]
name = "screaming-channels-ble"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.6,<3.15"
dependencies = [
    "cryptography>=49.0.0",
    "matplotlib>=3.9",
    "numpy>=2.0",
    "pyserial>=3.5",
    "scipy>=1.14",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
